--- a/ProyectoUno/ProyectoUno/templates/saludo.html
+++ b/ProyectoUno/ProyectoUno/templates/saludo.html
@@ -1,5 +1,6 @@
 <html>
     <body>
+        {% include "barra.html"%}
         <h1>
             Hola Pilotos es es mi primera pagina con Django
         </h1>
